--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,5 @@
 {% set name = "mt-metadata" %}
-{% set version = "0.1.9" %}
-
+{% set version = "0.2.0" %}
 
 package:
   name: {{ name|lower }}
@@ -8,32 +7,31 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/mt_metadata-{{ version }}.tar.gz
-  sha256: afad5667b30ca96929db52baf43e85f10fa9bef5af11c995b2dd1240a196b87b
+  sha256: 7b07c5d10b3bc08d6c8e300c873b34351bbfe6e73de595aaeb2b9770c8b1f4ad
 
 build:
-  number: 0
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
+  number: 0
 
 requirements:
   host:
-    - pip
+    - python >=3.5
     - pytest-runner
-    - python >=3.5
+    - pip
   run:
-    - concurrent-log-handler
-    - matplotlib-base
-    - numpy <=1.21
-    - obspy
-    - pandas
     - python >=3.5
+    - concurrent-log-handler
+    - numpy <=1.21
+    - pandas
     - pyyaml
+    - obspy
+    - matplotlib-base
     - xarray
 
 test:
   imports:
     - mt_metadata
-    - mt_metadata.base
   commands:
     - pip check
   requires:
@@ -42,11 +40,17 @@ test:
 about:
   home: https://github.com/kujaku11/mt_metadata
   summary: Metadata for magnetotelluric data
-  license: MIT
-  license_file: LICENSE
+  license: Unlicense & MIT
+  license_file:
+    - LICENSE
+    - .eggs/pytest_runner-6.0.0-py3.8.egg/EGG-INFO/LICENSE
+    - mt_metadata/timeseries/copyright.py
+    - mt_metadata/timeseries/standards/copyright.json
+    - mt_metadata/transfer_functions/io/emtfxml/metadata/copyright.py
+    - mt_metadata/transfer_functions/io/emtfxml/metadata/standards/copyright.json
 
 extra:
   recipe-maintainers:
     - kujaku11
-    - kkappler
     - lheagy
+    - kkappler
