--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,5 @@
 {% set name = "mt-metadata" %}
-{% set version = "0.2.1" %}
-
+{% set version = "0.2.3" %}
 
 package:
   name: {{ name|lower }}
@@ -8,32 +7,31 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/mt_metadata-{{ version }}.tar.gz
-  sha256: 7721f2590b11a26afe9662d52720e5ef92c8bc794c47b4eda32728352edb0cf3
+  sha256: be99f5ac79cf639f705b8da45ac54984481b3b6f9bbc46308c243bc66a46073b
 
 build:
-  number: 0
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
+  number: 0
 
 requirements:
   host:
-    - pip
+    - python >=3.7
     - pytest-runner
-    - python >=3.5
+    - pip
   run:
+    - python >=3.7
     - concurrent-log-handler
-    - matplotlib-base
-    - numpy <=1.21
-    - obspy
-    - pandas
-    - python >=3.5
+    - numpy
+    - pandas <=1.5.3
     - pyyaml
+    - obspy
+    - matplotlib-base
     - xarray
 
 test:
   imports:
     - mt_metadata
-    - mt_metadata.base
   commands:
     - pip check
   requires:
