Update Python version and add new dependencies
Updated Python version requirement to 3.10 and added new dependencies.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,9 +19,9 @@ requirements:
   host:
     - pip
     - pytest-runner
-    - python >=3.7
+    - python >=3.10
   run:
-    - python >=3.7
+    - python >=3.10
     - numpy
     - pandas
     - pyyaml
@@ -29,6 +29,9 @@ requirements:
     - matplotlib-base
     - xarray
     - loguru
+    - pydantic
+    - pyproj
+    - typing-extensions
 
 test:
   imports:
